docs/api/qiskit/0.33/qiskit.transpiler.passes.EchoRZXWeylDecomposition.mdx
---
title: EchoRZXWeylDecomposition (v0.33)
description: API reference for qiskit.transpiler.passes.EchoRZXWeylDecomposition in qiskit v0.33
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.EchoRZXWeylDecomposition
---

# EchoRZXWeylDecomposition

<Class id="qiskit.transpiler.passes.EchoRZXWeylDecomposition" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/transpiler/passes/optimization/echo_rzx_weyl_decomposition.py" signature="EchoRZXWeylDecomposition(*args, **kwargs)" modifiers="class">
  Bases: `qiskit.transpiler.basepasses.TransformationPass`

  Rewrite two-qubit gates using the Weyl decomposition.

  This transpiler pass rewrites two-qubit gates in terms of echoed cross-resonance gates according to the Weyl decomposition. A two-qubit gate will be replaced with at most six non-echoed RZXGates. Each pair of RZXGates forms an echoed RZXGate.

  EchoRZXWeylDecomposition pass.

  **Parameters**

  **instruction\_schedule\_map** ([*InstructionScheduleMap*](qiskit.pulse.InstructionScheduleMap "qiskit.pulse.InstructionScheduleMap")) – the mapping from circuit [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.Instruction") names and arguments to [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule")s.

  ## Methods

  <span id="qiskit-transpiler-passes-echorzxweyldecomposition-name" />

  ### name

  <Function id="qiskit.transpiler.passes.EchoRZXWeylDecomposition.name" signature="EchoRZXWeylDecomposition.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-echorzxweyldecomposition-run" />

  ### run

  <Function id="qiskit.transpiler.passes.EchoRZXWeylDecomposition.run" signature="EchoRZXWeylDecomposition.run(dag)">
    Run the EchoRZXWeylDecomposition pass on dag.

    Rewrites two-qubit gates in an arbitrary circuit in terms of echoed cross-resonance gates by computing the Weyl decomposition of the corresponding unitary. Modifies the input dag.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – DAG to rewrite.

    **Returns**

    The modified dag.

    **Return type**

    [DAGCircuit](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")

    **Raises**

    [**TranspilerError**](qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – If the circuit cannot be rewritten.
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.EchoRZXWeylDecomposition.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.EchoRZXWeylDecomposition.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

